styles.css
/* Normalize the styling of all elements */
*,
::before,
::after {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}


html {
  font-size: 62.5%;
  /* This sets the default font size for your web page to 10px (the browser default is 16px). This makes it easier to work with rem units later, as 2rem would be 20px. */

}

:root {
  --header1-color: #AD2626;
  --background-color: black;
  --navbar-text-color: white;
  --standard-text-color: white;
  --standard-text-font: Helvetica, sans-serif;
}

/***************/
/*   GENERAL   */
/***************/

a:hover {
  cursor: pointer;
}

body {
  background-color: var(--background-color);
}

.general-text-section {
  margin: auto;
  color: var(--standard-text-color);
  font-size: 1.6rem;
}

/***********/
/*   NAV   */
/***********/

.navbar {
  background-color: var(--background-color);
  position: relative;
  z-index: 1;
}

.navbar ul {
  list-style-type: none;
  margin: 0;
  padding: 4px 0 2px 0;
  display: flex;
}

.navbar li {
  margin: auto;
  min-width: 6rem;
  max-width: 10vw;
  line-height: 0;
  font-family: var(--standard-text-font);
}

@media screen and (max-width: 600px) {
  .navbar li {
    font-size: 1.2rem;
  }
}

@media screen and (min-width: 600px) and (max-width: 900px) {
  .navbar li {
    font-size: 1.35rem;
  }
}

@media screen and (min-width: 900px) {
  .navbar li {
    font-size: 1.5rem;
  }
}

.navbar a {
  display: block;
  color: var(--navbar-text-color);
  text-decoration: none;
  /*removes underlines */
  padding: auto;
}

.navbar a:hover {
  color: var(--header1-color);
}

.logo {
  height: 100%;
  width: 100%;
}

.logo:hover {
  background-color: var(--header1-color);
  cursor: pointer;
}

/*******************/
/*   HERO SECTION  */
/*******************/
.hero-section {
  display: flex;
  justify-content: center; 
  align-items: flex-start; /* Center the content vertically at the top */
}


.hero-img-container {
  position: relative;
}

.hero-img-extra-top-line {
  width: 100%;
  height: 1px;
  position: absolute;
  z-index: 1;
  background-color: var(--background-color);
}

.hero-img-extra-bottom-line {
  width: 100%;
  height: 4px;
  position: absolute;
  z-index: 1;
  background-color: var(--background-color);
  bottom: 0;
}

@media screen and (max-width: 600px) {
  .hero-img-container {
    width: 100%;
  }
}

@media screen and (min-width: 600px) and (max-width: 900px) {
  .hero-img-container {
    width: 90%;
  }
}

@media screen and (min-width: 900px) {
  .hero-img-container {
    width: 70%;
  }
}

.hero-img-mask {
  position: relative;
  z-index: 1;
}

.hero-img {
  position: absolute;
  z-index: -1;
  top: -50px;
  left: 0;
  width: 100%;
  display: cover;
}




/* QUALITIES SECTION */
.qualities-section {
  background-color: var(--background-color);
}

.qualities-section-grid-container {
  display: grid;
  grid-template-columns: 1fr;  
}

.qualities-text-section {
  color: #008000;
  font-size: 5rem;
  font-family: courier;
  text-align: center;
  width: 90%;
}

.text_1 {
  animation: text1;
}

.text_2 {
  animation: text2;
}

.text_3 {
  animation: text3;
}

.text_4 {
  animation: text4;
}

.text_1,
.text_2, .text_3, .text_4 {
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
  position: relative;
  animation-duration: 30s;
  animation-timing-function: steps(20, end);
  animation-iteration-count: infinite;
}

.text_1::after,
.text_2::after, .text_3::after, .text_4::after {
  content: "|";
  position: absolute;
  right: 0;
  animation: caret;
  animation-duration: 1s;
  animation-timing-function: steps(1, end);
  animation-iteration-count: infinite;
}

@keyframes text1 {

  0%,
  25%,
  50%,
  75%,
  100% {
    width: 0;
  }

  3%,
  23% {
    width: 8.3em;
  }
}

@keyframes text2 {

  0%,
  25%,
  50%,
  75%,
  100% {
    width: 0;
  }

  28%,
  48% {
    width: 7.5em;
  }
}

@keyframes text3 {

  0%,
  25%,
  50%,
  75%,
  100% {
    width: 0;
  }

  53%,
  73% {
    width: 8.8em;
  }
}

@keyframes text4 {

  0%,
  25%,
  50%,
  75%,
  100% {
    width: 0;
  }

  78%,
  98% {
    width: 7em;
  }
}

@keyframes caret {

  0%,
  100% {
    opacity: 0;
  }

  50% {
    opacity: 1;
  }
} 

